<resources>
    <string name="app_name">Asset Box</string>
    <string name="title_home">Home</string>
    <string name="title_assets_list">Assets List</string>
    <string name="title_add_asset">Add Asset</string>
    <string name="assets_card">Assets</string>
    <string name="locations_card">Locations</string>
    <string name="employees_card">Employees</string>
    <string name="census_list_card">Census Lists</string>
    <string name="no_assets_message">No assets yet</string>
    <string name="add_asset">Add asset</string>
    <string name="barcode">Barcode</string>
    <string name="scan">Scan</string>
    <string name="add">Add</string>
    <string name="location">Location</string>
    <string name="employee_name">Employee Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">save</string>
    <string name="add_item">Add item</string>
    <string name="find">Find</string>
    <string name="no_items">No items</string>
    <string name="cancel">Cancel</string>
    <string name="name_starting_text">Name:</string>
    <string name="employee_starting_text">Employee:</string>
    <string name="created_starting_text">Created at:</string>
    <string name="location_starting_text">Location:</string>
    <string name="old_employee_starting_text">Old Employee:</string>
    <string name="new_employee_starting_text">New Employee:</string>
    <string name="old_location_starting_text">Old Location:</string>
    <string name="new_location_starting_text">New Location:</string>
    <string name="description_starting_text">Description:</string>
    <string name="barcode_starting_text">Barcode:</string>
    <string name="price_starting_text">Price:</string>
    <string name="or">OR</string>
    <string name="empty">Empty</string>
    <string name="title_add_census_list">Add Census List</string>
    <string name="asset_image">Asset Image</string>
    <string name="new_employee_name">New Employee Name</string>
    <string name="new_location">New Location</string>
    <string name="census_list_name">Census List Name</string>
    <string name="error_occurred">Error occurred!</string>
    <string name="add_button_click_empty_field">All fields except Description and Image must be filled in.</string>
    <string name="asset_added">"Asset added.</string>
    <string name="scan_barcode">Scan a barcode.</string>
    <string name="google_maps_unavailable_message">Google maps unavailable.</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="are_you_sure_delete_asset">Are you sure you want to delete this asset?</string>
    <string name="are_you_sure_delete_census_list">Are you sure you want to delete this census list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="asset_details_updates">Asset details updated.</string>
    <string name="asset_details_not_updates">Asset details not updated.</string>
    <string name="please_enter_list_name">Please enter a list name.</string>
    <string name="census_list_added">Census list added.</string>
    <string name="please_enter_barcode">Please enter a barcode.</string>
    <string name="no_asset_found_with_barcode">No asset found with this barcode.</string>
    <string name="confirm_delete_employee">Are you sure you want to delete this employee?\nNote: All his assets will be deleted.</string>
    <string name="confirm_delete_location">Are you sure you want to delete this location?\nNote: All associated assets will be deleted.</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="serbian">Serbian</string>
    <string name="title_asset_details">Asset</string>
    <string name="title_locations">Locations</string>
    <string name="title_employees">Employees</string>
    <string name="title_edit_asset">Edit Asset</string>
    <string name="title_map">Map</string>
    <string name="title_census_lists">Census Lists</string>
    <string name="title_items">Items</string>
    <string name="title_add_item">Add Item</string>
    <string name="title_scan_item">Scan Item</string>
    <string name="view_on_map">View on map</string>
    <string name="category_name">Name</string>
    <string name="category_date">Date</string>
    <string-array name="search_categories">
        <item>Name</item>
        <item>Date</item>
    </string-array>
    <string-array name="search_category_name">
        <item>Name</item>
    </string-array>
</resources>