<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.unibl.etf.mr.assetbox.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_assets"
            app:destination="@id/navigation_assets" />
        <action
            android:id="@+id/action_navigation_home_to_locationsFragment"
            app:destination="@id/locationsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_employeesFragment"
            app:destination="@id/employeesFragment" />
        <action
            android:id="@+id/action_navigation_home_to_addAssetFragment"
            app:destination="@id/addAssetFragment" />
        <action
            android:id="@+id/action_navigation_home_to_censusListsFragment"
            app:destination="@id/censusListsFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_assets"
        android:name="org.unibl.etf.mr.assetbox.ui.assets.AssetsFragment"
        android:label="@string/title_assets_list"
        tools:layout="@layout/fragment_assets_list">

        <action
            android:id="@+id/action_navigation_assets_to_assetDetailsFragment"
            app:destination="@id/assetDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addAssetFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.assets.AddAssetFragment"
        android:label="@string/title_add_asset"
        tools:layout="@layout/fragment_add_asset" />
    <fragment
        android:id="@+id/assetDetailsFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.assets.AssetDetailsFragment"
        android:label="@string/title_asset_details">

        <action
            android:id="@+id/action_assetDetailsFragment_to_editAssetFragment"
            app:destination="@id/editAssetFragment" />
        <action
            android:id="@+id/action_assetDetailsFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/locationsFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.location.LocationsFragment"
        android:label="@string/title_locations">
        <action
            android:id="@+id/action_locationsFragment_to_navigation_assets"
            app:destination="@id/navigation_assets" />
    </fragment>
    <fragment
        android:id="@+id/employeesFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.employees.EmployeesFragment"
        android:label="@string/title_employees"
        tools:layout="@layout/fragment_employees">
        <action
            android:id="@+id/action_employeesFragment_to_navigation_assets"
            app:destination="@id/navigation_assets" />
    </fragment>
    <fragment
        android:id="@+id/editAssetFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.assets.EditAssetFragment"
        android:label="@string/title_edit_asset"
        tools:layout="@layout/fragment_edit_asset" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.location.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_mapsFragment_to_navigation_assets"
            app:destination="@id/navigation_assets" />
    </fragment>
    <fragment
        android:id="@+id/censusListsFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.censuslists.CensusListsFragment"
        android:label="@string/title_census_lists"
        tools:layout="@layout/fragment_census_lists">
        <action
            android:id="@+id/action_censusListsFragment_to_itemsFragment"
            app:destination="@id/itemsFragment" />
        <action
            android:id="@+id/action_censusListsFragment_to_addCensusListFragment"
            app:destination="@id/addCensusListFragment" />
    </fragment>
    <fragment
        android:id="@+id/itemsFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.censuslists.ItemsFragment"
        android:label="@string/title_items"
        tools:layout="@layout/fragment_items" />
    <fragment
        android:id="@+id/addCensusListFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.censuslists.AddCensusListFragment"
        android:label="@string/title_add_census_list">
        <action
            android:id="@+id/action_addCensusListFragment_to_scanItemFragment"
            app:destination="@id/scanItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/addItemFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.censuslists.AddItemFragment"
        android:label="@string/title_add_item" />
    <fragment
        android:id="@+id/scanItemFragment"
        android:name="org.unibl.etf.mr.assetbox.ui.censuslists.ScanItemFragment"
        android:label="@string/title_scan_item"
        tools:layout="@layout/fragment_scan_item">
        <action
            android:id="@+id/action_scanItemFragment_to_addItemFragment"
            app:destination="@id/addItemFragment" />
    </fragment>
</navigation>