<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10pt"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewAsset"
            android:layout_width="75pt"
            android:layout_height="75pt"
            android:src="@drawable/assets_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <TextView
        android:id="@+id/textViewCreationDateTime"
        android:text="Creation Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <TextView
        android:id="@+id/textViewBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/barcode" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price" />

    <TextView
        android:id="@+id/textViewEmployeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_name" />

    <EditText
        android:id="@+id/newEmployeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="New Employee Name" />


    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location" />

    <EditText
        android:id="@+id/newLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="New Location" />


    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add" />


</LinearLayout>