<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewAddAsset"
                    android:layout_width="75pt"
                    android:layout_height="75pt"
                    android:src="@drawable/box_add_asset_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addAssetImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:src="@drawable/camera_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewAddAsset"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewAddAsset" />


                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/imageViewAddAsset"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/editTextName"
                    android:hint="@string/description" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/editTextDescription">

                    <EditText
                        android:id="@+id/editTextBarcode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/barcode"
                        android:layout_weight="1"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/buttonScan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scan" />


                </LinearLayout>


                <EditText
                    android:id="@+id/editTextPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/editTextEmployeeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/employee_name"
                    app:layout_constraintTop_toBottomOf="@id/editTextPrice" />

                <EditText
                    android:id="@+id/editTextLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/editTextEmployeeName"
                    android:hint="@string/location" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
